tests/sksl/errors/golden/BinaryTypeMismatch.glsl
### Compilation failed:

error: 1: type mismatch: '*' cannot operate on 'int', 'bool'
error: 2: expected 'bool', but found 'int'
error: 2: expected 'bool', but found 'float'
error: 3: type mismatch: '==' cannot operate on 'float2', 'int'
error: 4: type mismatch: '!=' cannot operate on 'float2', 'int'
error: 6: type mismatch: '<' cannot operate on 'float2', 'float2'
error: 7: type mismatch: '<' cannot operate on 'float2', 'float'
error: 8: type mismatch: '<' cannot operate on 'float', 'float2'
8 errors
